# h3-py

./: .buildinfo  .coveragerc  .flake8  .gitignore  .gitmodules  .install.sh  .pre-commit-config.yaml  .test_parity.sh  .test_parity_cleanup.sh  .travis.yml  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  README.rst  Untitled.ipynb  Untitled1.ipynb  _changelog.html  api.html  api_comparison.html  api_quick.html  api_reference.html  api_verbose.html  appveyor.yml  apt.txt  area_table.ipynb  binding_version.py  build-wheels-manylinux.sh  contributing.html  dev_notes.md  example.ipynb  extreme_hex_area.ipynb  fabfile.py  genindex.html  h3.pyx  h3_version.py  h3core.pyx  intro.html  justfile  makefile  (+22 more)
.github/: ci-linux.yml  ci-macos.yml
.github/workflows/: build_docs.yml  ci-linux.yml  ci-macos.yml  ci-win2.yml  ci-windows-py27.yml  ci-windows.yml  ci-windows_py27.yml  coverage-lint-pr.yml  coverage-lint.yml  deploy_docs.yml  lint.yml  lint_and_coverage.yml  tests.yml  wheels-all.yml  wheels-linux.yml  wheels-mac.yml  wheels-windows.yml  wheels.yml
_modules/: index.html
_modules/h3/: _h3shape.html  _polygon.html
_modules/h3/api/: basic_str.html
_sources/: api_comparison.md  api_quick.md  api_reference.md  api_verbose.md  contributing.md  intro.md
cmake/: HunterGate.cmake  UseCython.cmake  toolchain.cmake
docs/: UnifiedDataLayers.ipynb  Usage.ipynb  _config.yml  _toc.yml  api.md  api_comparison.md  api_quick.md  api_reference.md  api_types.md  api_verbose.md  apis.md  contributing.md  intro.md  jupyter_book_notes.md  polygon_tutorial.ipynb  project_links.md
h3/: __init__.py  h3.py
h3core/: h3core.py
h3py/: CMakeLists.txt  __init__.py  api_set_int.py  api_set_str.py  array_int.py  geo.pyx  h3api.pxd  h3core.pyx  hexmem.pxd  hexmem.pyx  libh3.pxd  set_int.py  set_str.py  util.pxd  util.pyx
h3py/api/: _api_template.py  array_int.py  old.py  set_int.py  set_str.py
memtest/: makefile  readme.md  requirements.txt  testmem.py
poly/: Untitled.ipynb  example.ipynb  geopandas.ipynb  geoviews.ipynb  ipython_and_matplotlib.ipynb  malaria.ipynb  maybe_docs.ipynb  notes.md  plotting.ipynb  tutorial.ipynb  util.py
scripts/: api_functions.py
src/: CMakeLists.txt  __init__.py  _h3core.pxd  h3core.pyx  hexmem.pyx
src/h3/: CMakeLists.txt  __init__.py  _cells.pyx  _core.py  _edges.pyx  _geo.pyx  _h3shape.py  _internal_api.py  _polygon.py  _to_multipoly.pyx  _version.py  cells.pyx  core.py  edges.pyx  geo.pyx  h3core.pyx  h3lib.pxd  h3utils.pxd  h3utils.pyx  memview_int.pyx  to_multipoly.pyx  util.pxd  util.pyx
src/h3/_cy/: CMakeLists.txt  UseCython.cmake  __init__.py  cells.pxd  cells.pyx  edges.pxd  edges.pyx  error_system.pxd  error_system.pyx  geo.pxd  geo.pyx  h3lib.pxd  latlng.pxd  latlng.pyx  memory.pxd  memory.pyx  to_multipoly.pyx  unstable_area.pyx  unstable_vect.pyx  util.pxd  util.pyx  vertex.pyx
src/h3/api/: __init__.py  __init__.pyi  _api.pyi  _api_template.py  _util.py  array_int.py  basic_int.py  basic_int.pyi  basic_str.py  basic_str.pyi  memview_int.py  numpy_int.py  numpy_int.pyi  py_int.py  py_str.py  set_int.py  set_str.py
src/h3/api/basic_int/: __init__.py  _api_funcs.py  _api_template.py  _binding.py  _convert.py  _copy_of_api.py  _public_api.py  inputs_outputs.py
src/h3/api/basic_str/: __init__.py  _api_funcs.py  _binding.py  _convert.py  _public_api.py  inputs_outputs.py
src/h3/api/memview_int/: __init__.py  _api_funcs.py  _api_template.py  _binding.py  _convert.py  _public_api.py  inputs_outputs.py
src/h3/api/numpy_int/: __init__.py  _api_funcs.py  _binding.py  _convert.py  inputs_outputs.py
src/h3/unstable/: __init__.py  __init__.pyi  v4.py  vect.py  vect.pyi
tests/: cython_example.pyx  h3fake2_errors.py  readme.md  test.py  test_api_bindings_match.py  test_api_copy_match.py  test_array_int.py  test_basic.py  test_basic_int.py  test_basic_int.yml  test_basic_str.py  test_basic_str.yml  test_cells_and_edges.py  test_collection_inputs.py  test_cython.py  test_cython_cy.pyx  test_error_codes.py  test_geojson_containers.py  test_h3.py  test_length_area.py  test_memview_int.py  test_numpy_int.py  test_parity.py  test_polyfill.py  test_polygon_class.py  test_py_int.py  test_py_str.py  test_set_int.py  test_set_str.py  test_static_methods.yml  test_to_multipoly.py  test_to_multpoly.py  test_types_basic_int.yml  test_types_basic_str.yml  test_unstable_vect.py  util.py
tests/polyfill/: test_h3.py  test_polyfill.py  test_polyfill_ordering.py  test_polygon_class.py  test_to_multipoly.py  util_geo_interface.py
tests/test_apis/: test_basic_int.py  test_basic_str.py  test_collection_inputs.py  test_ico_faces.py  test_memview_int.py  test_numpy_int.py
tests/test_cython/: test_cython.py
tests/test_lib/: test_cells_and_edges.py  test_error_codes.py
tests/test_lib/polyfill/: test_h3.py  test_polyfill.py  test_polygon_class.py  test_to_multipoly.py
tests/test_lib/test_apis/: test_api_bindings_match.py  test_basic_int.py  test_basic_str.py  test_ico_faces.py  test_numpy_int.py
